    * FIX: Fix problem where snapins where invisible

    BI
    * FIX: Fixed filtering of Single-Host Aggregations
    * New sorter for aggregation group
    * FIX: fix sorting of Single-Host Aggregations after group
    * Avoid duplicate rule incarnations when using FOREACH_*
    * BI Boxes: allow closing boxes (not yet persisted)
    * New filter for services (not) contained in any aggregate

    Checks & Agents:
    * FIX: snmp_uptime handles empty snmp information without exception
    * FIX: Oracle checks try to handle ORA-* errors reported by the agent
      All oracle checks will return UNKNOWN when finding an ORA-* message
    * FIX: filesystem levels set via WATO didn't work, but do now

1.2.0b1:
    Core, Setup, etc.:
    * new tool 'livedump' for dumping configuration and status
      information from one monitoring core and importing this
      into another.
    * Enable new check registration API (not yet used in checks)
    * FIX: fix handling of prefix-tag rules (+), needed for WATO
    * FIX: handle buggy SNMP devices with non-consecutive OIDS
      (such as BINTEC routers)
    * Check API allows a check to get node information
    * FIX: fix problem with check includes in subchecks
    * Option --checks now also applies to ad-hoc check (e.g.
      cmk --checks=mrpe,df -v somehost)
    * check_mk_templates.cfg: added s to notification options
      of host and service (= downtime alerts)

    WATO:
    * Hosttag-editor: allow reordering of tags
    * Create very basic sample configuration when using
      WATO the first time (three tag groups, two rules)
    * Much more checks are configurable via WATO now
    * Distributed WATO: Made all URL calls using curl now
    * FIX: fix bug in inventory in validate_datatype()
    * Better output in case of inventory error
    * FIX: fix bug in host_icon rule on non OMD
    * FIX: do not use isdisjoint() (was in rule editor on Lenny)
    * FIX: allow UTF-8 encoded permission translations